# read_bazel_log

./: .gitignore  AndroidManifest.xml  AndroidManifest_result.xml  Android_Manifest_bazel.xml  Cargo.toml  README.md  example.sh  foo.txt  hprof  influxdb_add.sh  main.py  profile_parse.txt
src/: lib.rs  main.rs
src/front_of_house/: hosting.rs
