[package]
name = "read_bazel_log"
version = "0.1.0"
authors = ["noiz354 <noiz354@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.4.1"
regex = "1"
scanner-rust = "2.0.12"
futures={ version = "0.3.9", default-features = true, features=["thread-pool", "alloc"]} 

